Updated Font to Urbanist Font Theme

--- a/features.html
+++ b/features.html
@@ -109,10 +109,10 @@
           class="hidden md:flex flex-col absolute z-[100] top-56 left-32 leading-[50px]"
           id="video-section1"
         >
-          <h2 class="text-[48px] text-[#97CAEB] font-['Mitr'] font-medium">
+          <h2 class="text-[48px] text-[#97CAEB] urbanist-regular font-medium">
             An elegant way to
           </h2>
-          <h2 class="text-[68px] concert-one-regular font-medium text-white">
+          <h2 class="text-[68px] urbanist-regular font-medium text-white">
             cleanse your hands
           </h2>
         </div>
@@ -236,12 +236,12 @@
           class="flex flex-col w-full md:gap-y-6 md:bg-[url('/public/white 1.png')] md:bg-cover"
         >
           <h1
-            class="text-4xl md:text-[78px] text-[#97CAEB] font-medium concert-one-regular"
+            class="text-4xl md:text-[78px] text-[#97CAEB] font-medium urbanist-regular"
           >
             Wicked Wipes
           </h1>
           <h1
-            class="text-4xl md:text-[78px] text-[#97CAEB] font-medium concert-one-regular hover:text-[#3A50B3]"
+            class="text-4xl md:text-[78px] text-[#97CAEB] font-medium urbanist-regular hover:text-[#3A50B3]"
             id="design-heading"
           >
             Design
@@ -277,12 +277,12 @@
       <div class="flex flex-col md:flex-row w-full">
         <div class="flex flex-col w-full md:gap-y-6">
           <h1
-            class="text-white text-[40px] md:text-[78px] concert-one-regular font-medium"
+            class="text-white text-[40px] md:text-[78px] urbanist-regular font-medium"
           >
             How to use
           </h1>
           <h1
-            class="text-[#97CAEB] text-[40px] md:text-[78px] concert-one-regular font-medium"
+            class="text-[#97CAEB] text-[40px] md:text-[78px] urbanist-regular font-medium"
           >
             Wicked Wipes
           </h1>
@@ -290,7 +290,7 @@
         <div class="flex flex-col w-full mt-8 md:mt-0">
           <div class="w-full md:w-2/4 mb-2">
             <h2
-              class="text-white text-[28px] md:text-[46px] concert-one-regular font-medium"
+              class="text-white text-[28px] md:text-[46px] urbanist-regular font-medium"
             >
               STEP 1
             </h2>
@@ -309,7 +309,7 @@
       <div class="w-full flex justify-around py-16">
         <div class="flex flex-col w-56">
           <h2
-            class="text-white text-[28px] md:text-[46px] concert-one-regular font-normal"
+            class="text-white text-[28px] md:text-[46px] urbanist-regular font-normal"
           >
             STEP 2
           </h2>
@@ -320,7 +320,7 @@
         </div>
         <div class="flex flex-col w-56">
           <h2
-            class="text-white text-[28px] md:text-[46px] concert-one-regular font-normal"
+            class="text-white text-[28px] md:text-[46px] urbanist-regular font-normal"
           >
             STEP 3
           </h2>
@@ -331,7 +331,7 @@
         </div>
         <div class="flex flex-col w-56">
           <h2
-            class="text-white text-[28px] md:text-[46px] concert-one-regular font-normal"
+            class="text-white text-[28px] md:text-[46px] urbanist-regular font-normal"
           >
             STEP 4
           </h2>
@@ -438,12 +438,12 @@
       <div class="flex flex-col w-full">
         <div class="flex flex-col w-full md:gap-y-6">
           <h1
-            class="text-white text-[40px] md:text-[78px] concert-one-regular font-medium"
+            class="text-white text-[40px] md:text-[78px] urbanist-regular font-medium"
           >
             How to Use
           </h1>
           <h1
-            class="text-[#97CAEB] text-[40px] md:text-[78px] concert-one-regular font-medium"
+            class="text-[#97CAEB] text-[40px] md:text-[78px] urbanist-regular font-medium"
           >
             Wicked Wipes
           </h1>
@@ -455,7 +455,7 @@
               <div class="flex flex-col w-full mt-8">
                 <div class="w-full mb-2">
                   <h2
-                    class="text-white text-[28px] concert-one-regular font-medium"
+                    class="text-white text-[28px] urbanist-regular font-medium"
                   >
                     STEP 1
                   </h2>
@@ -486,7 +486,7 @@
                 <div class="flex flex-col justify-center items-center w-full">
                   <div class="w-full my-2 flex flex-col justify-center">
                     <h2
-                      class="text-white text-[28px] md:text-[46px] concert-one-regular font-medium"
+                      class="text-white text-[28px] md:text-[46px] urbanist-regular font-medium"
                     >
                       STEP 2
                     </h2>
@@ -534,7 +534,7 @@
               >
                 <div class="w-full my-2 flex flex-col justify-center">
                   <h2
-                    class="text-white text-[28px] md:text-[46px] concert-one-regular font-normal"
+                    class="text-white text-[28px] md:text-[46px] urbanist-regular font-normal"
                   >
                     STEP 3
                   </h2>
@@ -575,7 +575,7 @@
               >
                 <div class="w-full my-2 flex flex-col justify-center">
                   <h2
-                    class="text-white text-[28px] md:text-[46px] concert-one-regular font-normal"
+                    class="text-white text-[28px] md:text-[46px] urbanist-regular font-normal"
                   >
                     STEP 4
                   </h2>
@@ -976,7 +976,7 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h1 class="text-white font-['League Spartan'] font-bold text-base">
+          <h1 class="text-white urbanist-regular font-bold text-base">
             Follow Us
           </h1>
           <div class="flex gap-3 items-center">
