--- a/private-label.html
+++ b/private-label.html
@@ -173,7 +173,7 @@
         class="w-full flex flex-col md:flex-row absolute justidy-center md:justify-between gap-y-6 md:gap-x-10 px-6 md:px-24 py-10 items-end bottom-0"
       >
         <h1
-          class="text-lg md:text-5xl font-['Mitr'] font-medium md:whitespace-nowrap"
+          class="text-lg md:text-5xl urbanist-regular font-medium md:whitespace-nowrap"
         >
           Make an unforgettable impression <br class="hidden md:block" />
           with Wicked Wipes
@@ -194,7 +194,7 @@
         data-aos="zoom-in"
         data-aos-duration="1000"
       >
-        <h1 class="text-[48px] text-[#3A50B3] concert-one-regular font-medium">
+        <h1 class="text-[48px] text-[#3A50B3] urbanist-regular font-medium">
           One of a kind
         </h1>
       </div>
@@ -521,7 +521,7 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-2">
-          <h1 class="text-white font-['League Spartan'] font-bold text-base">
+          <h1 class="text-white urbanist-regular font-bold text-base">
             Follow Us
           </h1>
           <div class="flex gap-3 items-center">
