--- a/who-we-are.html
+++ b/who-we-are.html
@@ -155,7 +155,7 @@
       </div>
       <div class="flex flex-col w-full mt-96 pt-20">
         <h1
-          class="text-5xl font-bold concert-one-regular"
+          class="text-5xl font-bold urbanist-regular"
           data-aos="fade-right"
           data-aos-duration="700"
         >
@@ -182,7 +182,7 @@
         class="p-4 md:px-24 md:py-16 md:flex justify-between w-full items-center"
       >
         <h1
-          class="text-[64px] md:text-[78px] concert-one-regular font-bold w-full text-[#97CAEB]"
+          class="text-[64px] md:text-[78px] urbanist-regular font-bold w-full text-[#97CAEB]"
           data-aos="fade-right"
           data-aos-duration="700"
         >
@@ -238,7 +238,7 @@
         class="py-20 px-3 md:px-24 md:py-20 flex flex-col justify-center w-full items-center"
       >
         <h1
-          class="text-[64px] md:text-[78px] concert-one-regular font-medium w-full text-[#97CAEB] text-center"
+          class="text-[64px] md:text-[78px] urbanist-regular font-medium w-full text-[#97CAEB] text-center"
         >
           Who We are
         </h1>
