--- a/who-we-are.html
+++ b/who-we-are.html
@@ -158,13 +158,13 @@
       </div>
       <div class="flex flex-col w-full mt-96 pt-20">
         <h1
-          class="text-5xl font-bold urbanist-regular"
+          class="text-5xl font-black urbanist-regular"
           data-aos="fade-right"
           data-aos-duration="700"
         >
           About US
         </h1>
-        <p class="text-xl pt-10">
+        <p class="text-xl pt-10 urbanist-regular">
           WICKED WIPES is a brand new business run under the auspices of our
           founding company, Beatus Concepts Inc. Beatus (pronounced beahtus)
           means ”blessed” in Latin and as the founding members, we feel blessed
@@ -215,11 +215,11 @@
               alt=""
               class="rounded-full h-full object-cover duration-300 ease-in-out translate-y-16 group-hover:translate-y-0"
             />
-            <h1
+            <h2
               class="text-xl font-bold text-center text-[#3A50B3] urbanist-regular pt-4"
             >
               Shailesh Merai
-            </h1>
+            </h2>
           </div>
           <div
             class="rounded-full w-86 md:w-96 h-[300px] md:h-[600px] duration-300 ease-in-out bg-[#97CAEB] mx-4 md:mx-10"
@@ -229,22 +229,22 @@
               alt=""
               class="rounded-full h-full object-cover duration-300 ease-in-out translate-y-16 group-hover:translate-y-0"
             />
-            <h1
+            <h2
               class="text-xl font-bold text-center text-[#3A50B3] urbanist-regular pt-4"
             >
               John Sasso
-            </h1>
+            </h2>
           </div>
         </div>
       </div>
       <div
         class="py-20 px-3 md:px-24 md:py-20 flex flex-col justify-center w-full items-center"
       >
-        <h1
-          class="text-[64px] md:text-[78px] urbanist-regular font-medium w-full text-[#97CAEB] text-center"
+        <h2
+          class="text-[64px] md:text-[78px] urbanist-regular font-bold w-full text-[#97CAEB] text-center"
         >
           Who We are
-        </h1>
+        </h2>
         <p
           class="text-xl md:px-0 px-4 urbanist-regular text-center ease-in-out opacity-0 transition-opacity duration-500"
           id="info"
@@ -484,6 +484,10 @@
       function removeLinks(textarea) {
         // Remove any links by replacing them with an empty string
         textarea.value = textarea.value.replace(/https?:\/\/[^\s]+/g, "");
+        const domainRegex = /(?:https?:\/\/|www\.)?[a-zA-Z0-9-]+\.[a-zA-Z]{2,}(\/[^\s]*)?/g;
+    
+    // Remove any links or domain names by replacing them with an empty string
+    textarea.value = textarea.value.replace(domainRegex, '');
       }
     </script>
     <script>
