Updated Header Fonts

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     background-color:#FFF;
   }
   </style>
+  <meta property="og:title" content="Wicked Wipes" />
+  <meta property="og:url" content="https://www.wickedwipes.ca" />  
+  <meta property="og:image" content="https://www.wickedwipes.ca/images/sample.jpg" />
   <title>Wicked Wipes</title>
 </head>
 
@@ -84,7 +87,7 @@
         </button>
         <nav class="hidden md:flex items-center justify-center bg-blue-300 rounded-full z-[100]">
           <ul id="menu"
-            class="flex  justify-center items-center text-center px-10 gap-x-8 text-white text-xl font-normal ">
+            class="flex  justify-center items-center text-center px-10 gap-x-8 text-white text-xl urbanist-regular font-normal ">
             <li>
               <a href="features.html">Features</a>
             </li>
@@ -142,7 +145,7 @@
           <h1 class="text-[48px] urbanist-regular font-normal w-full" id="topic1">Hygienic, Safe, Natural,<br>
             Environmentally
             Friendly Wipes</h1>
-          <p class="text-xl font-normal py-5">A creative solution to clean and freshen hands</p>
+          <p class="text-xl font-normal py-5">A creative solution for clean and fresh hands</p>
         </div>
         <div class="w-full h-full flex justify-end object-contain" id="welcomeDiv-1">
           <img src="./public/pods1.png" class="" alt="">
@@ -345,7 +348,7 @@
         class="md:gap-x-40 flex md:flex-row flex-col justify-between items-center opacity-0 transition-opacity duration-300"
         id="document-heading1">
         <div class="flex flex-col md:gap-4 gap-4">
-          <h1 class="text-4xl md:text-[72px] text-gradient md:leading-none font-normal">Make it yours </h1>
+          <h1 class="text-4xl md:text-[72px] text-gradient md:leading-none urbanist-regular font-normal">Make it yours </h1>
           <p class="text-[20px] urbanist-regular font-normal text-[#3A50B3] word-wrap">Wicked
             Wipes is an original advertising opportunity for businesses and a successful marketing tool that will
             surprise and delight your customers. Add your brand to customize the pod.</p>
