--- a/who-we-are.html
+++ b/who-we-are.html
@@ -95,7 +95,7 @@
         >
           <ul
             id="menu"
-            class="flex justify-center items-center text-center px-10 gap-x-8 text-white text-xl font-normal"
+            class="flex justify-center items-center text-center px-10 gap-x-8 text-white text-xl urbanist-regular font-normal"
           >
             <li>
               <a href="features.html">Features</a>
