--- a/features.html
+++ b/features.html
@@ -142,7 +142,7 @@
           >
             <ul
               id="menu"
-              class="flex flex-col md:flex-row justify-center items-center text-center gap-y-4 md:gap-y-0 px-6 md:px-16 gap-x-4 md:gap-x-8 text-white text-lg md:text-xl font-normal"
+              class="flex flex-col md:flex-row justify-center items-center text-center gap-y-4 md:gap-y-0 px-6 md:px-16 gap-x-4 md:gap-x-8 text-white text-lg md:text-xl urbanist-regular font-normal"
             >
               <li><a href="features.html">Features</a></li>
               <li><a href="private-label.html">Private Label</a></li>
