--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -67,7 +67,7 @@
         <nav class="hidden md:flex items-center justify-center rounded-full">
           <ul
             id="menu"
-            class="flex flex-col md:flex-row justify-center items-center text-center gap-y-4 md:gap-y-0 md:px-16 md:gap-x-8 text-[#3A50B3] text-lg md:text-xl font-normal font-['Baloo']"
+            class="flex flex-col md:flex-row justify-center items-center text-center gap-y-4 md:gap-y-0 md:px-16 md:gap-x-8 text-[#3A50B3] text-lg md:text-xl font-normal urbanist-regular"
           >
             <li><a href="features.html">Features</a></li>
             <li><a href="private-label.html">Private Label</a></li>
