--- a/who-we-are.html
+++ b/who-we-are.html
@@ -484,11 +484,21 @@
       function removeLinks(textarea) {
         // Remove any links by replacing them with an empty string
         textarea.value = textarea.value.replace(/https?:\/\/[^\s]+/g, "");
-        const domainRegex = /(?:https?:\/\/|www\.)?[a-zA-Z0-9-]+\.[a-zA-Z]{2,}(\/[^\s]*)?/g;
-    
-    // Remove any links or domain names by replacing them with an empty string
-    textarea.value = textarea.value.replace(domainRegex, '');
+        const domainRegex =
+          /(?:https?:\/\/|www\.)?[a-zA-Z0-9-]+\.[a-zA-Z]{2,}(\/[^\s]*)?/g;
+
+        // Remove any links or domain names by replacing them with an empty string
+        textarea.value = textarea.value.replace(domainRegex, "");
       }
+      document.getElementById("message").addEventListener("input", function () {
+        if (this.value.length < 10) {
+          this.setCustomValidity(
+            "Please provide a more detailed description of your inquiry."
+          );
+        } else {
+          this.setCustomValidity("");
+        }
+      });
     </script>
     <script>
       const hamburger = document.getElementById("hamburger");
